fixed code wrap issue

--- a/_layouts/site.css
+++ b/_layouts/site.css
@@ -65,6 +65,11 @@ pre{
 	background-color:#efefef;
 	padding:3px;
 	border:1px solid #aaa;
+	white-space: pre-wrap;   
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;   
+    white-space: -o-pre-wrap;  
+    word-wrap: break-word;  
 }
 
 #middle
